--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "mongoose": "^5.12.2",
+    "node": "^15.10.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
@@ -47,5 +49,3 @@
   },
   "homepage": "https://github.com/Dimetri-Shearwood/Project-8#readme"
 }
-
-
